[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/bosses/boss1/Ninja.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/bullet64.png" type="Texture" id=2]
[ext_resource path="res://prefab/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/EnemyManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefab/HealthBarContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/BulletSpawner.gd" type="Script" id=6]
[ext_resource path="res://actors/bullets/BulletGeneric.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/actorsEMIT.tres" type="Animation" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 13.0

[node name="NinjaSpawner" type="Node2D" groups=["ENEMY", "NINJA_SPAWNER"]]
position = Vector2( 246, 139 )
script = ExtResource( 6 )
bullet_scene = ExtResource( 7 )
is_random = true
spawn_rate = 0.2
bullet_speed = 400.0
bulletColor = "B"
rotationChangeAfterTick = 10.0
changeBulletSize = true

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="EnemyManager" parent="." instance=ExtResource( 4 )]
hp = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EMIT = ExtResource( 8 )

[node name="Explosion" parent="." instance=ExtResource( 3 )]
emitting = false

[node name="EmitDot" type="Sprite" parent="."]
visible = false
modulate = Color( 0.854902, 0.172549, 0.219608, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="HealthBarContainer" parent="." instance=ExtResource( 5 )]
margin_left = 9.0
margin_top = 22.0
margin_right = 49.0
margin_bottom = 62.0

[node name="ProgressBar" parent="HealthBarContainer" index="0"]
margin_right = 10.0
margin_bottom = -39.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="EnemyManager" method="_on_Area2D_area_entered"]

[editable path="HealthBarContainer"]
